feat: search posts using elastic